# crabml

./: .gitignore  Cargo.toml  README.md  TODO  TODO.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config
.github/workflows/: ci.yml  rust.yml
crabml-cli/: Cargo.toml
crabml-cli/src/: main.rs
crabml-core/: Cargo.toml
crabml-core/benches/: matmul.rs
crabml-core/src/: error.rs  gguf.rs  lib.rs  tensor.rs
crabml-core/src/backends/: mod.rs
crabml-core/src/backends/cpu/: arithmetic.rs  backend.rs  cpu_device.rs  cpu_tensor.rs  mod.rs  pool.rs  tensor.rs  thread_pool.rs  validate.rs
crabml-core/src/backends/cpu/arch/: aarch64.rs  mod.rs
crabml-core/src/backends/cpu/archutil/: mod.rs  x86_64.rs
crabml-core/src/backends/cpu/buf/: api.rs  buf.rs  buf_f16.rs  buf_f32.rs  buf_q2_k.rs  buf_q3_k.rs  buf_q4_0.rs  buf_q4_1.rs  buf_q4_k.rs  buf_q5_0.rs  buf_q5_1.rs  buf_q5_k.rs  buf_q6_k.rs  buf_q8_0.rs  buf_q8_0_aarch64_neon.rs  buf_q8_0_fallback.rs  buf_q8_0_x86_64_avx2.rs  buf_q8_1.rs  buf_q8_k.rs  mod.rs  qkk.rs  util.rs
crabml-core/src/backends/cpu/primitives/: add.rs  arithmetic.rs  batch_matmul.rs  batch_matmul_vec.rs  concatenate.rs  contiguous.rs  div.rs  gelu.rs  matmul.rs  matmul_vec.rs  mod.rs  mul.rs  rms_norm.rs  rope.rs  rope_inplace.rs  scalar.rs  silu.rs  softmax.rs
crabml-core/src/backends/vulkan/: mod.rs  vulkan_device.rs  vulkan_tensor.rs
crabml-core/src/backends/vulkan/shaders/: add.comp
crabml-core/src/backends/wgpu/: arithmetic.rs  meta.rs  mod.rs  wgpu_device.rs  wgpu_tensor.rs
crabml-core/src/backends/wgpu/shaders/: add.wgsl  add_inplace.wgsl  batch_matmul.wgsl  binary.wgsl  concatenate.wgsl  contiguous.wgsl  div.wgsl  div_scalar_inplace.wgsl  gelu.wgsl  matmul_naive.wgsl  matmul_vec_f32.wgsl  mul.wgsl  mul_inplace.wgsl  rms_norm.wgsl  rope.wgsl  sgemv.wgsl  silu.wgsl  softmax.wgsl
crabml-core/src/backends/wgpu/shaders/quants/: q8_0_gemv.wgsl  q8_0_quantize.wgsl
crabml-core/src/cpu/: cpu_device.rs  cpu_tensor.rs  mod.rs  thread_pool.rs
crabml-core/src/cpu/archutil/: aarch64.rs
crabml-core/src/cpu/buf/: api.rs  buf_f16.rs  buf_f32.rs  buf_q2_k.rs  buf_q3_k.rs  buf_q4_0.rs  buf_q4_1.rs  buf_q4_k.rs  buf_q5_0.rs  buf_q5_1.rs  buf_q5_k.rs  buf_q6_k.rs  buf_q8_0.rs  buf_q8_1.rs  buf_q8_k.rs  mod.rs
crabml-core/src/cpu/primitives/: arithmetic.rs  batch_matmul.rs  concatenate.rs  contiguous.rs  gelu.rs  matmul_vec.rs  mod.rs  rms_norm.rs  rope.rs  silu.rs  softmax.rs
crabml-core/src/tensor/: api.rs  arithmetic.rs  cpu.rs  logical_ops.rs  metrics.rs  mod.rs  op.rs  ops.rs  strider.rs  tensor.rs
crabml-core/src/tensor/cpu/: arithmetic.rs  buf.rs  compute.rs  cpu_tensor.rs  mod.rs  quant.rs  raw_tensor.rs  tensor.rs  validate.rs
crabml-core/src/tensor/cpu/arithmetic/: arithmetic.rs  mod.rs
crabml-core/src/tensor/cpu/buf/: buf.rs  buf_f32.rs  buf_q8_0.rs  mod.rs
crabml-core/src/tokenizer/: bpe.rs  mod.rs  tokenizer.rs  tokenizer_gpt2.rs  tokenizer_llama.rs
crabml-llama2/: Cargo.toml
crabml-llama2/src/: chat.rs  lib.rs  llama2.rs  math.rs  model.rs  sampler.rs  tokenizer.rs
crabml-llama2/src/chat/: chat.rs  mark_matcher.rs  mod.rs
crabml-vulkan/: Cargo.toml
crabml-vulkan/src/: lib.rs  push_constants.rs  vulkan_device.rs  vulkan_tensor.rs
crabml-vulkan/src/shaders/: add.comp  arithmetic.comp  arithmetic.glsl  batch_matmul.glsl  concatenate.glsl  contiguous.glsl  gelu.glsl  rms_norm.glsl  rope.glsl  sgemv.glsl  silu.comp  softmax.glsl
crabml-wgpu/: Cargo.toml
crabml-wgpu/src/: lib.rs  mod.rs  wgpu_device.rs  wgpu_tensor.rs
crabml-wgpu/src/shaders/: add.wgsl  div.wgsl  mul.wgsl  rope.wgsl  silu.wgsl  softmax.wgsl
docs/: how-to-get-gguf-models.md  how-to-get-quantized-gguf-models.md
src/: gguf.rs  lib.rs
testdata/: tinyllamas-stories-260k-f32.gguf
