[workspace]
resolver = "2"
members = [
    "crabml-core",
    "crabml-llama2",
    "crabml-cli",
]

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/crabml/crabml"

[workspace.dependencies]
crabml = { version = "0.1.0", path = "crabml-core" }
crabml-llama2 = { version = "0.1.0", path = "crabml-llama2" }
