[package]
name = "crabml-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "crabml cli"

[dependencies]
rayon = "1.7.0"
num_cpus = "1.16.0"
clap = { version = "4.0", features = ["derive"] }
crabml-llama2 = { workspace = true }
crabml = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.2.1"
