[package]
name = "crabml"
version = "0.1.0"
edition = "2021"

[dependencies]
int-enum = "0.5.0"
memmap2 = "0.7.1"
rayon = "1.8.0"
half = { version = "2.3.1" }
matrixmultiply = { version = "0.3", default-features = false }

[dev-dependencies]
pretty_assertions = "1.2.1"
bencher = "0.1.5"

[[bench]]
name = "matmul"
harness = false