[package]
name = "crabml-llama2"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "crabml llama2 support"

[dependencies]
memmap2 = "0.7.1"
rand = "0.8.5"
num_cpus = "1.16.0"
crabml = { workspace = true }
crabml-wgpu = { workspace = true }
half = { version = "2.3.1" }

[dev-dependencies]
pretty_assertions = "1.2.1"
approx = "0.5.1"