[package]
name = "crabml-llama2"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "crabml llama2 support"

[dependencies]
rand = "0.8.5"
crabml = { workspace = true }
crabml-vulkan = { workspace = true }
half = { version = "2.3.1" }

[dev-dependencies]
approx = "0.5.1"