[package]
name = "crabml-vulkan"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "crabml vulkan support"

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
crabml = { workspace = true }
smallvec = "1.13.2"

[dev-dependencies]
approx = "0.5.1"