[package]
name = "crabml-wgpu"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "crabml wgpu support"

[dependencies]
wgpu = "0.19.1"
pollster = "0.2.4"
bytemuck = { version = "1.14.0", features = ["derive"] }
crabml = { workspace = true }

[dev-dependencies]
approx = "0.5.1"
